--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,87 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --light-gray: #e9e9e9;
+  --gray: #999;
+  --dark-gray: #333333;
+  --blue: #2196F3;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+#root {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+}
+
+.title {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 3rem;
+  text-decoration: underline;
+  margin-bottom: 70px;
+  color: var(--dark-gray);
+}
+
+.square {
+  background: #fff;
+  border: 1px solid var(--gray);
+  width: 50px;
+  height: 50px;
+  margin-right: -1px;
+  margin-top: -1px;
+  padding: 0;
+  text-align: center;
+}
+
+.square:hover {
+  background: var(--light-gray);
+}
+
+.status {
+  font-size: 1.7rem;
+  margin-bottom: 20px;
+  text-align: center;
+  padding: 10px;
+}
+
+.status.loss {
+  background-color: #ff4949;
+}
+
+.status.win {
+  background-color: #40fd88;
+}
+
+.board {
+  display: grid;
+  grid-template-columns: repeat(9, max-content);
+}
+
+.game-controls {
+  margin-top: 50px;
+}
+
+.game-controls button {
+  background-color: transparent;
+  width: 150px;
+  border: 2px solid var(--blue);
+  color: var(--blue);
+  font-size: 16px;
+  cursor: pointer;
+  padding: 12px;
+  border-radius: 5px;
+  transition-duration: 0.5s;
+}
+
+.game-controls button:hover {
+  background-color: var(--blue);
+  color: white;
+}
+
+.replay-button {
+  float: right;
 }
