--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root {
   --light-gray: #e9e9e9;
-  --gray: #999;
+  --gray: #7B7B7B;
   --dark-gray: #333333;
   --blue: #2196F3;
 }
@@ -27,8 +27,8 @@ body {
 }
 
 .square {
-  background: #fff;
-  border: 1px solid var(--gray);
+  background: var(--light-gray);
+  border: 2px solid var(--gray);
   width: 50px;
   height: 50px;
   margin-right: -1px;
@@ -37,8 +37,9 @@ body {
   text-align: center;
 }
 
-.square:hover {
-  background: var(--light-gray);
+svg {
+  max-width: 48px;
+  max-height: 48px;
 }
 
 .status {
