--- a/src/index.css
+++ b/src/index.css
@@ -35,8 +35,6 @@ body {
 .square {
   background: var(--light-gray);
   border: 2px solid var(--gray);
-  width: 50px;
-  height: 50px;
   margin-right: -1px;
   margin-top: -1px;
   padding: 0;
@@ -47,7 +45,32 @@ body {
   background: red;
 }
 
-svg {
+.square.small {
+  width: 30px;
+  height: 30px;
+}
+
+.square.small svg {
+  max-width: 28px;
+  max-height: 28px;
+}
+
+.square.medium {
+  width: 40px;
+  height: 40px;
+}
+
+.square.medium svg {
+  max-width: 38px;
+  max-height: 38px;
+}
+
+.square.large {
+  width: 50px;
+  height: 50px;
+}
+
+.square.large svg {
   max-width: 48px;
   max-height: 48px;
 }
@@ -100,6 +123,7 @@ svg {
 
 .difficulty-controls {
   margin-top: 50px;
+  width: 100%;
 }
 
 .difficulty-controls span {
@@ -150,4 +174,13 @@ svg {
 .expert-mode:hover {
   border: 2px solid var(--expert);
   color: var(--expert);
+}
+
+.board-size-controls {
+  width: 100%;
+  margin-top: 50px;
+}
+
+.board-size-controls label {
+  margin-right: 10px;
 }
