Improve board resizing behaviour

--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,11 @@ body {
   max-height: 28px;
 }
 
+.square.small svg.number {
+  max-width: 20px;
+  max-height: 20px;
+}
+
 .square.medium {
   width: 40px;
   height: 40px;
@@ -74,6 +79,11 @@ body {
 .square.large svg {
   max-width: 48px;
   max-height: 48px;
+}
+
+.square.large svg.number {
+  width: 35px;
+  height: 35px;
 }
 
 .status {
@@ -204,38 +214,63 @@ body {
   }
   
   .square.large {
-    width: 40px;
-    height: 40px;
+    width: 42px;
+    height: 42px;
   }
   
   .square.large svg {
     max-width: 38px;
     max-height: 38px;
   }
+
+  .square.large svg.number {
+    width: auto;
+    height: auto;
+  }
 }
 
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1250px) {
+  .square.medium {
+    width: 32px;
+    height: 32px;
+  }
+  
+  .square.medium svg {
+    max-width: 30px;
+    max-height: 30px;
+  }
+
+  .square.medium svg.number {
+    max-width: 24px;
+    max-height: 24px;
+  }
+
   .square.large {
-    width: 35px;
-    height: 35px;
+    width: 37px;
+    height: 37px;
   }
   
   .square.large svg {
-    max-width: 33px;
-    max-height: 33px;
+    max-width: 35px;
+    max-height: 35px;
   }
 }
 
-@media screen and (max-width: 1080px) {
+@media screen and (max-width: 1100px) {
   .square.small {
     width: 24px;
     height: 24px;
   }
   
   .square.small svg {
-    max-width: 20px;
-    max-height: 20px;
+    max-width: 22px;
+    max-height: 22px;
+  }
+
+  .square.small svg.number {
+    max-width: 18px;
+    max-height: 18px;
   }
   
   .square.medium {
@@ -244,8 +279,13 @@ body {
   }
   
   .square.medium svg {
-    max-width: 24px;
-    max-height: 24px;
+    max-width: 26px;
+    max-height: 26px;
+  }
+
+  .square.medium svg.number {
+    max-width: 20px;
+    max-height: 20px;
   }
   
   .square.large {
@@ -256,6 +296,11 @@ body {
   .square.large svg {
     max-width: 28px;
     max-height: 28px;
+  }
+
+  .square.large svg.number {
+    max-width: 20px;
+    max-height: 20px;
   }
 
   .board {
